// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkButton should render button correctly with all props 1`] = `
<RCTBPKButton
  icon="tick"
  iconAlignment="leading"
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`iOS BpkButton should render button correctly with icon 1`] = `
<RCTBPKButton
  icon="tick"
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`iOS BpkButton should render correctly with required props 1`] = `
<RCTBPKButton
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`iOS BpkButton should render icon only button correctly 1`] = `
<RCTBPKButton
  icon="tick"
  iconOnly={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`iOS BpkButton should render icon only button correctly 2`] = `
<RCTBPKButton
  icon="tick"
  iconOnly={true}
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`iOS BpkButton should render large button correctly with icon 1`] = `
<RCTBPKButton
  icon="tick"
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;

exports[`iOS BpkButton should render large button correctly with required props 1`] = `
<RCTBPKButton
  large={true}
  onPress={[Function]}
  title="Primary"
  type="primary"
/>
`;
